
    HIVE-1017 || and && are not supported currently
    (Ning Zhang via namit)

    HIVE-916 typedbytes: changes
    (namit via He Yongqiang)

    HIVE-976 Compare the path in unit tests for sampling
    (John Sichi via namit)

    HIVE-1026 Fix test sample6.q to make it deterministic
    (John Sichi via namit)

    HIVE-1028. Fix tinyint in TypedBytes. (Namit Jain via zshao)

Release 0.4.0 -  Unreleased

  INCOMPATIBLE CHANGES

    HIVE-143. Remove the old file based metastore, in favour of the
    RDBMS based metastore. (prasadc via johan)

    HIVE-724. Change HiveServer.getSchema() to return Hive types rather
    than Thrift types. Changed existing getSchema() to getThriftSchema()
    (Eric Hwang via rmurthy)

  NEW FEATURES

    HIVE-354. UDF for length of a string. (Neil Conway via namit).

    HIVE-402. Implement UDF regexp. (Raghotham Murthy via namit)

    HIVE-250. Shared memory java dbm for map-side joins.
    (Joydeep Sen Sarma via zshao)

    HIVE-164. Use CASE through GenericUDF (Zheng Shao via namit)

    HIVE-464. Add alter partition method to the meastore interface.
    (Prasad Chakka via zshao)

    HIVE-352. Column-based storage format RCFile.
    (Yongqiang He via zshao)

    HIVE-420. Support regular expressions for column names
    (Zheng Shao via namit)

    HIVE-463. Add a pre execution hook to ql
    (Ashish Thusoo via prasadc)

    HIVE-476. Add getTable and getPartition calls to the ReadEntity and
     WriteEntity objects in PreExecute hooks. (Ashish Thusoo via prasadc)

    HIVE-518. Add test mode to hive where input tables are sampled.
    (Namit Jain via rmurthy)

    HIVE-509. Add create table like.
    (Zheng Shao via namit)

    HIVE-195. Map-side join. (Namit Jain via zshao)

    HIVE-470. Add COALESCE. (Zheng Shao via namit)

    HIVE-460. Improve Column Pruning. (He Yongqiang via namit)

    HIVE-563. UDF for parsing the URL: parse_url. (Suresh Antony via zshao)
