@@ -1,0 +1,2 @@
+set fs.default.name='http://www.example.com;
+show tables;
